data/derived/comb/progs/unify/prog7618.ml.out
Characters 29-33:
  let fixpoint (f,b) = wwhile (fu f ,b);;
                               ^^^^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
